--- a/index.html
+++ b/index.html
@@ -9,87 +9,7 @@
 
   <link rel="shortcut icon" type="image/png" href="/static/icon.png">
   <link rel="apple-touch-icon" href="/static/icon.png">
-  <style>
-    body, html {
-      background-color: #ebecf0;
-      font-family: sans-serif;
-      font-size: 16px;
-    }
-
-    div, p {
-      color: #babecc;
-      text-shadow: 1px 1px 1px white;
-    }
-
-    .container-buttons {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .button {
-      display: block;
-      position: relative;
-      width: 80px;
-      height: 80px;
-      box-sizing: content-box;
-      padding: 20px;
-      background-color: #ebecf0;
-      color: #61677c;
-      font-weight: bold;
-      border: 0;
-      outline: 0;
-      font-size: 16px;
-      border-radius: 20px;
-      box-shadow: -5px -5px 20px white, 5px 5px 20px #babecc;
-      transition: all 0.2s ease-in-out;
-      cursor: pointer;
-      font-weight: 600;
-      margin: 20px;
-      -webkit-tap-highlight-color: transparent;
-    }
-
-    .button:active {
-      box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px white;
-    }
-
-    .arrow {
-      position: absolute;
-      transform: translate(-50%, -50%);
-      left: 50%;
-      top: 50%;
-      width: 0;
-      height: 0;
-      border-left: 18px solid transparent;
-      border-right: 18px solid transparent;
-    }
-
-    .arrow-up {
-      border-bottom: 30px solid #babecc;
-    }
-
-    .arrow-down {
-      border-top: 30px solid #babecc;
-    }
-
-    .arrow-stop {
-      border: 15px solid #babecc;
-    }
-
-    @media (orientation: landscape) {
-      .container-buttons {
-        position: fixed;
-        width: 100%;
-        text-align: center;
-      }
-
-      .button {
-        display: inline-block;
-        margin: 10px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
   <div>
@@ -105,20 +25,6 @@
       </button>
     </div>
   </div>
-  <script type="text/javascript">
-    (function() {
-      var buttons = document.getElementsByClassName('button');
-
-      for (var i = 0; i < buttons.length; ++i) {
-        buttons[i].addEventListener('click', function(e) {
-          var name = e.currentTarget.name;
-          var http = new XMLHttpRequest();
-
-          http.open('HEAD', '/button/' + name);
-          http.send();
-        });
-      }
-    })();
-  </script>
+  <script type="text/javascript" src="/static/main.js"></script>
 </body>
 </html>
