--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="shortcut icon" type="image/png" href="/static/icon.png">
   <link rel="apple-touch-icon" href="/static/icon.png">
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
   <div>
