--- a/setup.html
+++ b/setup.html
@@ -15,11 +15,11 @@
   <div class="container-form">
     <h1 class="title">Access point setup</h1>
     <form id="form-setup" action="">
-      <input type="text" name="ssid" placeholder="SSID" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <input type="submit" id="btn-submit" value="Save">
+      <input type="text" class="input-text" name="ssid" placeholder="SSID" required>
+      <input type="password" class="input-text" name="password" placeholder="Password" required>
+      <input type="submit" id="btn-submit" class="input-submit" value="Save">
     </form>
-    <div id="message" class="hidden"></div>
+    <div id="message" class="input-text setup-hidden"></div>
   </div>
   <script type="text/javascript" src="/static/setup.js"></script>
 </body>
