Fixed AP name conflict issues

--- a/setup.html
+++ b/setup.html
@@ -19,7 +19,7 @@
       <input type="password" class="input-text" name="password" placeholder="Password" required>
       <input type="submit" id="btn-submit" class="input-submit" value="Save">
     </form>
-    <div id="message" class="input-text setup-hidden"></div>
+    <div id="message" class="setup-message setup-hidden"></div>
   </div>
   <script type="text/javascript" src="/static/setup.js"></script>
 </body>
